# AutoSudo

./: CMakeLists.txt  DOCUMENT.md  README.md
cmake/: AutoSudoSdkConfig.cmake.in
src/: approval.cpp  approval.hpp  auth.cpp  auth.hpp  auth_ui.cpp  auth_ui.hpp  authlib.cpp  authlib.hpp  broker.cpp  broker.hpp  broker_main.cpp  broker_protocol.hpp  client_main.cpp  defs.hpp  help_doc.hpp  installer.cpp  installer.hpp  main.cpp  pipeclient.cpp  pipeclient.hpp  pipeserver.cpp  pipeserver.hpp  protocol.cpp  protocol.hpp  rule_client.cpp  rule_client.hpp  sdk.cpp  sdk.hpp  service_main.cpp  service_main.cpp.bak  toast.cpp  toast.hpp  token.cpp  token.hpp  wintoken.cpp  wintoken.hpp
